--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Rape-of-Lucrece_1505
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Shakespeare, William
@@ -16,6 +19,8 @@ description: "The Rape of Lucrece (1594) is a narrative poem by William Shakespe
   \ (1593), Shakespeare had included a dedicatory letter to his patron, the Earl of\
   \ Southampton, in which he promised to write a \"graver work\". Accordingly, The\
   \ Rape of Lucrece has a serious tone throughout.\n From Wikipedia (CC BY-SA)."
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1505#The-Rape-of-Lucrece
 gutenberg_issued: '1998-10-01'
 gutenberg_type: Text
 identifiers:
