--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Rape-of-Lucrece_1505
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -33,6 +33,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Poetry'
 - !lcc 'PR'
+- GITenberg
 title: The Rape of Lucrece
 url: http://www.gutenberg.org/ebooks/1505
 wikipedia:
